modify the code

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,12 @@
         "psr-4": {
             "Kaushal\\Twilio\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Kaushal\\Twilio\\TwilioServiceProvider"
+            ]
+        }
     }
 }
